# general-llmops-pipeline

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  poetry.toml  pyproject.toml
.github/workflows/: ci-cd.yml
confs/: deployment.yaml  evaluation.yaml  feature_engineering.yaml  fine_tuning.yaml  gateway.yaml  generate_dataset.yaml  models.yaml  monitoring.yaml  rag_chain_config.yaml
confs/app/: hr_chatbot.yaml
dashboard/: app.py
docs/: 01-project-overview.md  02-gcp-resources.md  03-setup-guide.md  04-lab-testing-guide.md  06-developer-setup-and-run-guide.md  07-architecture-and-component-explanation.md  08-code-walkthrough-and-explanation.md  09-gcp-resources-and-pipeline-flow.md  10-github-setup-guide.md  README.md  terraform_infrastructure.md
kfp_pipelines/: __init__.py  compile_and_run.py  deployment.py  feature_engineering.py  fine_tuning.py  master.py  monitoring.py
lab_test/: .env.lab  01_test_gemini.py  02_test_gcs.py  03_test_vector_db.py  04_test_rag_pipeline.py  05_test_evaluation.py  06_test_serving.py  __init__.py  local_vector_db.py  requirements_lab.txt  run_lab_test.py
serving/: __init__.py  agent.py  callbacks.py  canary.py  client.py  gateway.py  prompt.py  server.py  task_detection.py  tools.py
serving/utils/: __init__.py  config.py  cost_tracker.py  observability.py
src/llmops_pipeline/: __init__.py  __main__.py  scripts.py  settings.py
src/llmops_pipeline/io/: __init__.py  configs.py  manifest.py  model_router.py  prompt_registry.py  services.py  vector_db.py
src/llmops_pipeline/pipelines/: __init__.py  base.py
src/llmops_pipeline/pipelines/deployment/: __init__.py  evaluate_and_deploy.py  register_model.py
src/llmops_pipeline/pipelines/feature_engineering/: __init__.py  create_vector_db.py  ingest_documents.py
src/llmops_pipeline/pipelines/fine_tuning/: __init__.py  evaluate.py  prepare_dataset.py  train.py
src/llmops_pipeline/pipelines/managers/: __init__.py  deployment_manager.py  feature_engineering_manager.py  fine_tuning_manager.py  monitoring_manager.py
src/llmops_pipeline/pipelines/monitoring/: __init__.py  diagnose.py  generate_dataset.py  post_deploy_eval.py  remediate.py
terraform/: main.tf  terraform.tfvars.example
terraform/bootstrap/: .terraform.lock.hcl  main.tf  terraform.tfvars.example
terraform/main/: api_gateway.tf  bigquery.tf  main.tf  monitoring.tf  openapi.yaml.tpl  scheduler.tf  secrets.tf  terraform.tfvars.example
tests/: conftest.py  test_config.py  test_endpoints.py  test_evaluation.py  test_manifest.py  test_model_router.py  test_pipelines_mock.py  test_prompt_registry.py  test_serving.py
